force-app/main/default/objects/leankor__Marker__c/leankor__Marker__c.object-meta.xml
<CustomObject>
    <description>An image object which acts as a visual marker on a kanban board or value stream map or brainstorming canvas.</description>
    <label>Marker</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Marker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Markers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>