force-app/main/default/objects/leankor__Marker__c/fields/leankor__Bottom__c.field-meta.xml
<CustomField>
    <fullName>leankor__Bottom__c</fullName>
    <description>Bottom coordinate of the image or icon marker on the page.</description>
    <inlineHelpText>Enter the bottom coordinate of the image or icon marker on the page.</inlineHelpText>
    <label>Bottom</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>