force-app/main/default/objects/leankor__Marker__c/fields/leankor__CmpID__c.field-meta.xml
<CustomField>
    <fullName>leankor__CmpID__c</fullName>
    <description>The internal browser ID of the image or icon marker on the page.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the internal browser ID of the image or icon marker on the page.</inlineHelpText>
    <label>Component ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>