force-app/main/default/objects/leankor__Marker__c/fields/leankor__CSSLayout__c.field-meta.xml
<CustomField>
    <fullName>leankor__CSSLayout__c</fullName>
    <description>The CSS of the image or icon marker on the page.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the CSS of the image or icon marker on the page.</inlineHelpText>
    <label>CSS Layout</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>