force-app/main/default/objects/leankor__Marker__c/fields/leankor__GUID2__c.field-meta.xml
<CustomField>
    <fullName>leankor__GUID2__c</fullName>
    <caseSensitive>true</caseSensitive>
    <defaultValue>&quot;885ee49a-8489-4091-bf76-8a07048066f9&quot;</defaultValue>
    <description>The unique client browser ID of the image or icon marker on the page.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Enter the unique client browser ID of the image or icon marker on the page. This is automatically generated when the marker is first created.</inlineHelpText>
    <label>GUID 2</label>
    <length>45</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>