force-app/main/default/objects/leankor__Marker__c/fields/leankor__Height__c.field-meta.xml
<CustomField>
    <fullName>leankor__Height__c</fullName>
    <description>The height in pixels of the image or icon marker on the page.</description>
    <inlineHelpText>Enter the height in pixels of the image or icon marker on the page.</inlineHelpText>
    <label>Height</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>