force-app/main/default/objects/leankor__Marker__c/fields/leankor__JSONData__c.field-meta.xml
<CustomField>
    <fullName>leankor__JSONData__c</fullName>
    <defaultValue>&quot;{}&quot;</defaultValue>
    <description>The data saved from the JSON Definition fields of the image or icon marker on the page.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the data saved from the JSON Definition fields of the image or icon marker on the page.</inlineHelpText>
    <label>JSON Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>