force-app/main/default/objects/leankor__Marker__c/fields/leankor__JSONDefinition__c.field-meta.xml
<CustomField>
    <fullName>leankor__JSONDefinition__c</fullName>
    <defaultValue>&quot;{}&quot;</defaultValue>
    <description>The configurable field definition of the image or icon marker on the page.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the JSON field definition of the image or icon marker on the page.</inlineHelpText>
    <label>JSON Definition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>