force-app/main/default/objects/leankor__Marker__c/fields/leankor__Left__c.field-meta.xml
<CustomField>
    <fullName>leankor__Left__c</fullName>
    <description>The left coordinate of the image or icon marker on the page.</description>
    <inlineHelpText>Enter the left coordinate of the image or icon marker on the page.</inlineHelpText>
    <label>Left</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>