force-app/main/default/objects/leankor__Marker__c/fields/leankor__LockState__c.field-meta.xml
<CustomField>
    <fullName>leankor__LockState__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field show state of Marker i.e. Marker is locked or NOT.</description>
    <inlineHelpText>This field show state of Marker i.e. Marker is locked or NOT.</inlineHelpText>
    <label>LockState</label>
    <type>Checkbox</type>
</CustomField>