force-app/main/default/objects/leankor__Marker__c/fields/leankor__Sticker__c.field-meta.xml
<CustomField>
    <fullName>leankor__Sticker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The sticker from which this marker was created. If empty, it means a custom image was uploaded from the users device.</description>
    <inlineHelpText>Select the sticker which created this marker. If left empty, the system assumes a custom image was uploaded from the users device.</inlineHelpText>
    <label>Sticker</label>
    <referenceTo>leankor__Sticker__c</referenceTo>
    <relationshipLabel>Markers</relationshipLabel>
    <relationshipName>Markers</relationshipName>
    <type>Lookup</type>
</CustomField>