force-app/main/default/objects/leankor__Marker__c/fields/leankor__TextLabel__c.field-meta.xml
<CustomField>
    <fullName>leankor__TextLabel__c</fullName>
    <description>Store Text for marker Type &quot;Label&quot;.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Store Text for marker Type &quot;Label&quot;.</inlineHelpText>
    <label>Text Label</label>
    <length>131051</length>
    <type>LongTextArea</type>
</CustomField>