force-app/main/default/objects/leankor__Marker__c/fields/leankor__Type__c.field-meta.xml
<CustomField>
    <fullName>leankor__Type__c</fullName>
    <description>This Field Is Use Storing Marker Type.</description>
    <inlineHelpText>This Field Is Use Storing Marker Type.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Marker</fullName>
                <default>true</default>
                <label>Marker</label>
            </value>
            <value>
                <fullName>Label</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>