force-app/main/default/objects/leankor__Marker__c/fields/leankor__UrlLink__c.field-meta.xml
<CustomField>
    <fullName>leankor__UrlLink__c</fullName>
    <description>Save URL Link For Marker.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Save URL Link For Marker.</inlineHelpText>
    <label>URL Link</label>
    <type>Url</type>
</CustomField>