force-app/main/default/objects/leankor__Marker__c/fields/leankor__ValueStream__c.field-meta.xml
<CustomField>
    <fullName>leankor__ValueStream__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The value stream upon-which this image or icon marker is to be placed.</description>
    <inlineHelpText>Enter the value stream upon-which this image or icon marker is to be place.</inlineHelpText>
    <label>Value Stream</label>
    <referenceTo>leankor__ValueStream__c</referenceTo>
    <relationshipLabel>Markers</relationshipLabel>
    <relationshipName>Markers</relationshipName>
    <type>Lookup</type>
</CustomField>