force-app/main/default/objects/leankor__Marker__c/fields/leankor__ValueStreamCardLink__c.field-meta.xml
<CustomField>
    <fullName>leankor__ValueStreamCardLink__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains KanbanCard ID of with Marker is connected.</description>
    <inlineHelpText>This field contains KanbanCard ID of with Marker is connected.</inlineHelpText>
    <label>Value Stream Card Link</label>
    <referenceTo>leankor__KanbanCard__c</referenceTo>
    <relationshipLabel>Markers</relationshipLabel>
    <relationshipName>Markers</relationshipName>
    <type>Lookup</type>
</CustomField>