force-app/main/default/objects/leankor__Marker__c/fields/leankor__ValueStreamLink__c.field-meta.xml
<CustomField>
    <fullName>leankor__ValueStreamLink__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The value stream to which this icon or image will jump if double-tapped on the page.</description>
    <inlineHelpText>Enter the value stream to which this icon or image will jump if double-tapped on the page.</inlineHelpText>
    <label>Value Stream Link</label>
    <referenceTo>leankor__ValueStream__c</referenceTo>
    <relationshipLabel>Markers (Value Stream Link)</relationshipLabel>
    <relationshipName>MarkersLink</relationshipName>
    <type>Lookup</type>
</CustomField>