force-app/main/default/objects/leankor__Marker__c/fields/leankor__X__c.field-meta.xml
<CustomField>
    <fullName>leankor__X__c</fullName>
    <description>The x-coordinate of the image or icon marker on the page.</description>
    <inlineHelpText>Enter the x-coordinate of the image or icon marker on the page.</inlineHelpText>
    <label>X Coordinate</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>