force-app/main/default/objects/leankor__Marker__c/fields/leankor__Y__c.field-meta.xml
<CustomField>
    <fullName>leankor__Y__c</fullName>
    <description>The y-coordinate of the image or icon marker on the page.</description>
    <inlineHelpText>Enter the y-coordinate of the image or icon marker on the page.</inlineHelpText>
    <label>Y Coordinate</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>