force-app/main/default/objects/leankor__Marker__c/fields/leankor__ZIndex__c.field-meta.xml
<CustomField>
    <fullName>leankor__ZIndex__c</fullName>
    <defaultValue>500</defaultValue>
    <description>This is the third dimension of Marker like X and Y. It shows which Marker overlapping others&apos;.</description>
    <inlineHelpText>This is the third dimension of Marker like X and Y. It shows which Marker overlapping others&apos;.</inlineHelpText>
    <label>Z Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>